# split_merge_segmentation

./: CMakeLists.txt  main.cpp  splitMergeSegmentation.cpp  splitMergeSegmentation.h
Region/: Color.cpp  Color.h  Region.cpp  Region.h  RegionData.cpp  RegionData.h
Tree/: TreeNode.cpp  TreeNode.h
util/: util.cpp  util.h
